[gd_scene load_steps=12 format=3 uid="uid://dxohy88odqn5f"]

[ext_resource type="Theme" uid="uid://d1rxorbgvgyer" path="res://ui/ridiculous_stream_main.theme" id="1_qmkjg"]
[ext_resource type="Script" uid="uid://q0ymxli6aci6" path="res://lib/games_info/pnl_itchio_app_info.gd" id="2_dnt1d"]
[ext_resource type="Script" uid="uid://dd5s3v6y22kq8" path="res://lib/games_info/ItchIOAppData.gd" id="3_kkve7"]
[ext_resource type="Script" uid="uid://dc576m26xm0qe" path="res://lib/games_info/ItchIOService.gd" id="3_qmkjg"]
[ext_resource type="Texture2D" uid="uid://bmgt2xi3i1310" path="res://lib/games_info/itchio_icon.svg" id="4_kkve7"]
[ext_resource type="Shader" uid="uid://cq1mq7jh52cus" path="res://lib/games_info/blur.gdshader" id="5_kkve7"]
[ext_resource type="Texture2D" uid="uid://hudfe6pxykni" path="res://ui/bootstrap_icons/x.png" id="6_y6jt0"]
[ext_resource type="StyleBox" uid="uid://cly0o4e4fqaop" path="res://ui/editor_light_panel_transp.stylebox" id="7_jc7hf"]

[sub_resource type="Resource" id="Resource_kkve7"]
script = ExtResource("3_kkve7")
id = 3474101
title = "Authentic Italian Pizza"
authors = Array[Dictionary]([{
"name": "Trevron",
"url": "https://trevron.itch.io"
}])
tags = Array[String](["ai-generated", "ai-generated-graphics", "meme"])
links = {
"comments": "https://trevron.itch.io/authentic-italian-pizza/comments",
"self": "https://trevron.itch.io/authentic-italian-pizza"
}
cover_image = "https://img.itch.zone/aW1nLzIwNzI3NjY3LmpwZw==/315x250%23c/cFal67.jpg"
price = ""
description = "This is specifically for iRad, it is the best I could do in 2 hours.





Just in case it was not obvious, this is just a meme. 

Music done by me, images done by probably 1 billion people that won't get credit. 

Use genAI ethically (aka don't unless you are memeing on a tight schedule)."
screenshots_thumbnails = Array[String](["https://img.itch.zone/aW1nLzIwNzI3NjY3LmpwZw==/347x500/DET0ox.jpg"])
screenshots_full = Array[String](["https://img.itch.zone/aW1nLzIwNzI3NjY3LmpwZw==/original/laE%2BZC.jpg"])

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ml2rx"]
shader = ExtResource("5_kkve7")
shader_parameter/strength = 0.3
shader_parameter/samples = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyqus"]
bg_color = Color(0, 0, 0, 0.341176)

[node name="pnl_itchio_app_info" type="PanelContainer"]
offset_right = 564.0
offset_bottom = 977.0
size_flags_horizontal = 3
theme = ExtResource("1_qmkjg")
script = ExtResource("2_dnt1d")
tool_app_url = "https://uff.itch.io/ridiculous-shopping"
selected_itchio_game = 7
test_data = SubResource("Resource_kkve7")

[node name="ItchIOService" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_qmkjg")
metadata/_custom_type_script = "uid://dc576m26xm0qe"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="bg_img" type="TextureRect" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.529412)
material = SubResource("ShaderMaterial_ml2rx")
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="title" type="MarginContainer" parent="vb"]
layout_mode = 2

[node name="hb_title" type="HBoxContainer" parent="vb/title"]
layout_mode = 2
alignment = 1

[node name="ico" type="TextureRect" parent="vb/title/hb_title"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture = ExtResource("4_kkve7")
expand_mode = 1
stretch_mode = 5

[node name="lb_title" type="Label" parent="vb/title/hb_title"]
layout_mode = 2
text = "ItchIO App info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_close_pnl" type="Button" parent="vb/title"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("6_y6jt0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="sep" type="HSeparator" parent="vb"]
layout_mode = 2

[node name="hb_search" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="lb" type="Label" parent="vb/hb_search"]
layout_mode = 2
text = "App url"

[node name="ln_search" type="LineEdit" parent="vb/hb_search"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "https://trevron.itch.io/authentic-italian-pizza"
placeholder_text = "app url"

[node name="ln_app_id" type="LineEdit" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "3474101"
placeholder_text = "App ID"
alignment = 1
editable = false

[node name="pnl_info" type="PanelContainer" parent="vb"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("7_jc7hf")

[node name="scr" type="ScrollContainer" parent="vb/pnl_info"]
layout_mode = 2

[node name="vb_info" type="VBoxContainer" parent="vb/pnl_info/scr"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="lb_name" type="Label" parent="vb/pnl_info/scr/vb_info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Authentic Italian Pizza"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="lb_authors" type="RichTextLabel" parent="vb/pnl_info/scr/vb_info"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[i]by [b][url=https://trevron.itch.io]Trevron[/url][/b][/i]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="pnl_capsule" type="PanelContainer" parent="vb/pnl_info/scr/vb_info"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tyqus")

[node name="hb_capsule" type="HBoxContainer" parent="vb/pnl_info/scr/vb_info/pnl_capsule"]
layout_mode = 2

[node name="empty1" type="Control" parent="vb/pnl_info/scr/vb_info/pnl_capsule/hb_capsule"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="tex_capsule_img" type="TextureRect" parent="vb/pnl_info/scr/vb_info/pnl_capsule/hb_capsule"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 5
stretch_mode = 5

[node name="empty2" type="Control" parent="vb/pnl_info/scr/vb_info/pnl_capsule/hb_capsule"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="hb_price" type="HBoxContainer" parent="vb/pnl_info/scr/vb_info"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="lb_price_descr" type="RichTextLabel" parent="vb/pnl_info/scr/vb_info/hb_price"]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[i]Price[/i]|"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="lb_price" type="RichTextLabel" parent="vb/pnl_info/scr/vb_info/hb_price"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[color=green][wave][b]Free to play![/b][/wave][/color]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="sep" type="HSeparator" parent="vb/pnl_info/scr/vb_info"]
layout_mode = 2

[node name="lb_short_description" type="RichTextLabel" parent="vb/pnl_info/scr/vb_info"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "This is specifically for iRad, it is the best I could do in 2 hours.





Just in case it was not obvious, this is just a meme. 

Music done by me, images done by probably 1 billion people that won't get credit. 

Use genAI ethically (aka don't unless you are memeing on a tight schedule)."

[node name="btn_visit_page" type="Button" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
text = "Visit Itch.io Page"

[connection signal="pressed" from="vb/title/btn_close_pnl" to="." method="_on_btn_close_pnl_pressed"]
[connection signal="pressed" from="vb/btn_visit_page" to="." method="_on_btn_visit_page_pressed"]
